Changed the path and SSl

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <form class="search__box" id="search__form">
         <input type="text" placeholder="Enter the City" name="place" required/>
         <button type="submit" class="search__box-icon">
-          <img src="/public/images/search.png" alt="Search" />
+          <img src="./public/images/search.png" alt="Search" />
         </button>
       </form>
       <div class="details">
